--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
@@ -66,7 +66,7 @@
                             <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu1" id="toggleMenu1"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-people"></i> TÀI KHOẢN
+                                <i class="bi bi-people"></i> TÀI KHOẢN <i class="bi bi-caret-down-fill" style="float:right;"></i>
                             </a>
                             <ul class="collapse" id="dropdownMenu1" style="list-style-type: none; padding-left: 35px;">
                                 <li>
@@ -96,7 +96,7 @@
                             <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu2" id="toggleMenu2"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-list"></i> DANH MỤC
+                                <i class="bi bi-list"></i> DANH MỤC <i class="bi bi-caret-down-fill" style="float:right;"></i>
                             </a>
                             <ul class="collapse" id="dropdownMenu2" style="list-style-type: none; padding-left: 35px;">
                                 <li>
