Add thông báo-layout

--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
@@ -93,6 +93,13 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="" id="linkAnnouncement" style="text-decoration:none;"
+                               onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                               onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                <i class="bi bi-exclamation-circle"></i> THÔNG BÁO
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu2" id="toggleMenu2"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
