--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
@@ -66,21 +66,21 @@
                             <a class="nav-link" role="button" aria-expanded="false" aria-controls="dropdownMenu1" id="toggleMenu1"
                                onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                <i class="bi bi-people"></i> TÀI KHOẢN <i class="bi bi-caret-down-fill" style="float:right;"></i>
+                                <i class="bi bi-people"></i> NGƯỜI DÙNG <i class="bi bi-caret-down-fill" style="float:right;"></i>
                             </a>
                             <ul class="collapse" id="dropdownMenu1" style="list-style-type: none; padding-left: 35px;">
+                                <li>
+                                    <a class="dropdown-item" href="/ProfileManager/AdvisorProfiles" id="linkAdvisorProfiles" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
+                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
+                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
+                                        <i class="bi bi-person-vcard-fill"></i> Nhân Sự
+                                    </a>
+                                </li>
                                 <li>
                                     <a class="dropdown-item" href="/ProfileManager/StudentProfiles" id="linkStudentProfiles" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
                                        onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
                                        onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
                                         <i class="bi bi-person-vcard"></i> Sinh viên
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="/ProfileManager/AdvisorProfiles" id="linkAdvisorProfiles" style="text-decoration:none; color: #fff; font-size:1.2rem; font-weight:bold;"
-                                       onmouseover="this.style.backgroundColor='#c82333'; this.style.color='#fff';"
-                                       onmouseout="this.style.backgroundColor='transparent'; this.style.color='#fff';">
-                                        <i class="bi bi-person-vcard-fill"></i> Cố vấn
                                     </a>
                                 </li>
                             </ul>
